# EdgeForge-Runtime-

./: .gitignore  CMakeLists.txt  LICENSE  README.md
configs/: runtime_config.json  sample_jobs.json
cpp_runtime/: CMakeLists.txt
cpp_runtime/include/cli/: CliParser.hpp
cpp_runtime/include/core/: IModelRunner.hpp  InferenceJob.hpp  InferenceResult.hpp  InferenceScheduler.hpp  MetricsCollector.hpp  ModelRunnerFactory.hpp  RuntimeConfig.hpp  RuntimeLogger.hpp  TensorUtils.hpp
cpp_runtime/include/runners/: OnnxModelRunner.hpp
cpp_runtime/src/: main.cpp
cpp_runtime/src/cli/: CliParser.cpp
cpp_runtime/src/core/: InferenceScheduler.cpp  MetricsCollector.cpp  RuntimeLogger.cpp  TensorUtils.cpp
cpp_runtime/src/runners/: OnnxModelRunner.cpp
docs/: architecture.md  build_and_run.md  performance_report_template.md  plugin_design.md  runtime_flow.md
models/: README.md
python_tools/: benchmark_runtime.py  export_model_to_onnx.py  generate_sample_input.py  quantize_model.py  requirements.txt
sample_inputs/: README.md
tests/: CMakeLists.txt  test_common.hpp  test_logger.cpp  test_main.cpp  test_metrics.cpp  test_scheduler.cpp  test_tensor_utils.cpp
